--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="first write clear">
         <label>请输入QQ号码：</label>
         <input id="firstInput" type="text" placeholder="请输入您的QQ号码">
-        <span>一键登录QQ</span>
+        <span id="entryForQQ">一键登录QQ</span>
     </div>
     <div class="wraning"></div>
     <div class="second write clear">
