--- a/index.html
+++ b/index.html
@@ -59,21 +59,34 @@
     <div class="content">
         <ul>
             <li>1、资费介绍</li>
-            <li>（1）腾讯视频会员+30GB定向流量，41.5元/月。</li>
+            <li>（1）腾讯视频会员权益+30GB腾讯视频APP定向流量，资费为41.5元/月。</li>
             <li>（2）如您之前已开通“任我看腾讯视频流量包-24元档”，本次订购只给您开通腾讯视频包月会员权益，扣费17.5元，不重复扣费。</li>
-            <li>2、业务详细介绍</li>
-            <li>（1）会员特权按照业务开通之日起往后31天，可以跨月计算，精确到天。</li>
+            <li>2、业务介绍</li>
+            <li>（1）腾讯视频VIP权益按照业务开通之日起往后31天，可以跨月计算，精确到天。</li>
         </ul>
         <div class="more">点击加载更多</div>
         <ul class="moreList">
-            <li>（2）视频流量包使用规则与对应档位的任我看视频流量包相同。 所含流量为腾讯视频APP的定向流量，仅可用于此APP（需要更新到最新版本）。当月剩余流量无法结转至次月使用。不能分享、不能转赠。 流量优先级：低于7天视频会员流量包的流量优先级，高于套餐通用流量，即先使用7天视频会员流量包的流量，再使用本产品所含流量，最后使用套餐通用流量。</li>
+            <li>（2）本产品所含流量为腾讯视频APP的定向流量，仅可用于此APP（需要更新到最新版本）。当月剩余流量无法结转至次月使用。不能分享、不能转赠。</li>
+            <li>（3）流量优先级：低于7天视频会员流量包的流量优先级，高于套餐通用流量，即先使用7天视频会员流量包的流量，再使用本产品所含流量，最后使用套餐通用流量。</li>
+            <li>（4）流量可在中国移动2G/3G/4G网络下，访问腾讯视频APP中的特定视频内容。但不包括以下内容：</li>
+            <li>① 客户端启动、登录及客户端内的图片、文字、视频内插播广告、弹幕、第三方广告、主播类视频、在线观看/下载/缓存第三方视频等。</li>
+            <li>② 手机号码处于国际或港澳台地区漫游状态下产生的流量。</li>
+            <li>③ 利用手机设置代理服务器或VPN等方式，访问APP所产生的流量。</li>
+            <li>④ 用无线上网卡、平板电脑、CPE、MIFI等非手机设备使用产生的流量。</li>
+            <li>⑤ 手机作为热点使用产生的流量。</li>
+            <li>⑥ 使用CMWAP接入点方式，访问视频APP所产生的流量。</li>
             <li>3、生效及扣费规则</li>
-            <li>（1）3GB档每月可多次订购（最多3次），30GB档每月仅可订购一次</li>
-            <li>（2）3GB档、30GB档产品订购立即生效，取消次月生效。办理当日费用一次性全额收取、流量全额提供；</li>
-            <li>（3）客户订购腾讯3GB档产品后，不可订购腾讯30GB档产品。</li>
-            <li>（4）客户订购30GB档产品后，仍可订购3GB档产品，但不能指向同一APP。</li>
+            <li>（1）本产品每月仅可订购一次。</li>
+            <li>（2）本产品订购立即生效，取消次月生效。办理当日费用一次性全额收取、流量全额提供。</li>
+            <li>（3）如您已订购腾讯3GB档产品，则不可订购腾讯30GB档产品。</li>
+            <li>（4）如您已订购30GB档产品，仍可订购3GB档产品，但不能指向同一APP。</li>
             <li>（5）本业务服务内容和资费有效期到2017年12月31日，到期后双方若无异议本业务自动顺延，如有变化请以门户网站公示为准。</li>
             <li>（6）业务规则详询10086或关注微信公众号“任我看助手”。</li>
+            <li>4、温馨提示</li>
+            <li>（1）用户使用话费支付，支付成功即时扣费（该套餐费用不包含通讯费）。</li>
+            <li>（2）该产品为包月产品，每月自动续费，如需退订，请咨询10086。</li>
+            <li>（3）如手机账户话费余额不足将无法完成支付。</li>
+            <li>（4）更多业务详情，请咨询北京移动10086。</li>
         </ul>
     </div>
 </footer>
