--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
             <li class="clear">
                 <span></span>
                 <p>产品名称：</p>
-                <p>30G腾讯视频权益专属流量月包</p>
+                <p>7天QQ音乐会员流量包</p>
             </li>
             <li class="clear">
                 <span></span>
                 <p>产品资源：</p>
-                <p>30GB腾讯视频专属流量+腾讯视频VIP包月<br>权益</p>
+                <p>7天1GB本地通用流量+7天QQ音乐VIP<br>权益</p>
             </li>
             <li class="clear">
                 <span></span>
                 <p>产品资费：</p>
-                <p><i>41.5元</i>/月</p>
+                <p><i>11.9元</i>/月</p>
             </li>
         </ul>
     </div>
@@ -49,6 +49,30 @@
         <div class="submit">立即订购</div>
     </div>
 </section>
+<section>
+    <div class="queryBox">
+        <div class="queryTitle">
+            <span></span>
+            <p>确认办理</p>
+        </div>
+        <ul>
+            <li>
+                <span>开通产品：</span>
+                <span>QQ会员音乐流量包（11.9元）</span>
+            </li>
+            <li>
+                <span>手机号码：</span>
+                <span id="phoneNum"></span>
+            </li>
+            <li>
+                <span>QQ号码：</span>
+                <span id="qqNum"></span>
+            </li>
+        </ul>
+        <div class="queryBtn">确认开通</div>
+    </div>
+</section>
+<div class="mask" id="mask"></div>
 <footer>
     <div class="title">
         <span></span>
