--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>30G腾讯视频权益专属流量月包</title>
+    <!--<meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+    <title>QQ音乐会员流量包</title>
     <link rel="stylesheet" href="css/reset.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,12 +21,17 @@
             <li class="clear">
                 <span></span>
                 <p>产品资源：</p>
-                <p>7天1GB本地通用流量+7天QQ音乐VIP<br>权益</p>
+                <p>7天1GB本地通用流量+7天QQ音乐VIP权益</p>
             </li>
             <li class="clear">
                 <span></span>
                 <p>产品资费：</p>
                 <p><i>11.9元</i>/月</p>
+            </li>
+            <li class="clear">
+                <span></span>
+                <p>有效日期：</p>
+                <p>办理后立即生效，有效期7天</p>
             </li>
         </ul>
     </div>
@@ -81,36 +86,24 @@
     </div>
     <div class="content">
         <ul>
-            <li>1、资费介绍</li>
-            <li>（1）腾讯视频会员权益+30GB腾讯视频APP定向流量，资费为41.5元/月。</li>
-            <li>（2）如您之前已开通“任我看腾讯视频流量包-24元档”，本次订购只给您开通腾讯视频包月会员权益，扣费17.5元，不重复扣费。</li>
-            <li>2、业务介绍</li>
-            <li>（1）腾讯视频VIP权益按照业务开通之日起往后31天，可以跨月计算，精确到天。</li>
+            <li>1、产品价格：11.9元/次。本产品为短期优惠，优惠截止至2017年12月31日。</li>
+            <li>2、产品资源：1024MB北京本地7天通用流量+ QQ音乐7天会员权益。套餐中包含的流量在北京2G、3G、4G网络下均可使用。</li>
+            <li>3、有效期：立即办理立即生效，QQ音乐会员权益和1024MB流量的有效期均为7天，过期失效。</li>
+            <li>4、会员流量包可重复购买，一天内一个手机号码和一个QQ号码只能够订购1次，一个月内最多订购4次。</li>
+            <li>5、请输入正确的QQ号码，订购成功后，以QQ号码作为登录QQ音乐的唯一标识，可获取QQ音乐会员资格，手机号码可获得北京移动1024MB本地7天通用流量。</li>
         </ul>
         <div class="more">点击加载更多</div>
         <ul class="moreList">
-            <li>（2）本产品所含流量为腾讯视频APP的定向流量，仅可用于此APP（需要更新到最新版本）。当月剩余流量无法结转至次月使用。不能分享、不能转赠。</li>
-            <li>（3）流量优先级：低于7天视频会员流量包的流量优先级，高于套餐通用流量，即先使用7天视频会员流量包的流量，再使用本产品所含流量，最后使用套餐通用流量。</li>
-            <li>（4）流量可在中国移动2G/3G/4G网络下，访问腾讯视频APP中的特定视频内容。但不包括以下内容：</li>
-            <li>① 客户端启动、登录及客户端内的图片、文字、视频内插播广告、弹幕、第三方广告、主播类视频、在线观看/下载/缓存第三方视频等。</li>
-            <li>② 手机号码处于国际或港澳台地区漫游状态下产生的流量。</li>
-            <li>③ 利用手机设置代理服务器或VPN等方式，访问APP所产生的流量。</li>
-            <li>④ 用无线上网卡、平板电脑、CPE、MIFI等非手机设备使用产生的流量。</li>
-            <li>⑤ 手机作为热点使用产生的流量。</li>
-            <li>⑥ 使用CMWAP接入点方式，访问视频APP所产生的流量。</li>
-            <li>3、生效及扣费规则</li>
-            <li>（1）本产品每月仅可订购一次。</li>
-            <li>（2）本产品订购立即生效，取消次月生效。办理当日费用一次性全额收取、流量全额提供。</li>
-            <li>（3）如您已订购腾讯3GB档产品，则不可订购腾讯30GB档产品。</li>
-            <li>（4）如您已订购30GB档产品，仍可订购3GB档产品，但不能指向同一APP。</li>
-            <li>（5）本业务服务内容和资费有效期到2017年12月31日，到期后双方若无异议本业务自动顺延，如有变化请以门户网站公示为准。</li>
-            <li>（6）业务规则详询10086或关注微信公众号“任我看助手”。</li>
-            <li>4、温馨提示</li>
-            <li>（1）用户使用话费支付，支付成功即时扣费（该套餐费用不包含通讯费）。</li>
-            <li>（2）该产品为包月产品，每月自动续费，如需退订，请咨询10086。</li>
-            <li>（3）如手机账户话费余额不足将无法完成支付。</li>
-            <li>（4）更多业务详情，请咨询北京移动10086。</li>
+            <li>6、产品开通后立即扣费，为一次性收费，不会每月扣取包月费用。</li>
+            <li>7、产品订购后无法取消，业务到期后剩余流量和会员权益自动失效。产品有效期内，若手机号码整月处于停机状态，有效期不顺延。
+            </li>
+            <li>8、流量有效期到期如果有流量剩余，则流量清零。</li>
+            <li>9、互斥业务：本业务与4G超级日租卡、46元本地流量专享套餐无法同时办理、与新本地15元数据流量套餐、移动数据流量产品商务套餐、以及神州行标准客户的15元CMWAP包月不限量套餐、全球通/动感地带的MO套餐20元档等包月不限量套餐互斥，详询10086。</li>
+            <li>10、产品包含的流量为北京本地通用流量，超出后按您现有流量资费标准执行。若您由于套餐外使用流量达到15GB时，上网功能被关闭，您申请移动数据流量不限流量叠加包后，可正常办理视频会员流量包，并使用流量包中的流量。</li>
+            <li>11、客服电话：0755-8376333。（收通话费）</li>
+            <li>12、更多业务详情，请咨询北京移动10086。</li>
         </ul>
+        <div class="hide">点击收起</div>
     </div>
 </footer>
 </body>
