--- a/success.html
+++ b/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>30G腾讯视频权益专属流量月包</title>
+    <title>QQ音乐会员流量包</title>
     <link rel="stylesheet" href="css/reset.min.css">
     <link rel="stylesheet" href="css/succAndfail.css">
 </head>
