--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 <section>
     <div class="first write clear">
         <label>请输入QQ号码：</label>
-        <input id="firstInput" type="number" placeholder="请输入您的QQ号码">
+        <input id="firstInput" type="number" pattern="\d*" placeholder="请输入您的QQ号码">
     </div>
     <div class="wraning"></div>
     <div class="second write clear">
         <label>再次输入QQ号码：</label>
-        <input id="secondInput" type="number" placeholder="请再次输入您的QQ号码">
+        <input id="secondInput" type="number" pattern="\d*" placeholder="请再次输入您的QQ号码">
         <span id="yes"></span>
         <span id="wron"></span>
     </div>
