--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
             <li class="clear">
                 <span></span>
                 <p>产品资费：</p>
-                <p><i>11.9元</i>/次</p>
+                <p><i>17元</i>/次</p>
             </li>
             <li class="clear">
                 <span></span>
@@ -38,12 +38,12 @@
 <section>
     <div class="first write clear">
         <label>请输入QQ号码：</label>
-        <input id="firstInput" type="number" pattern="\d*" placeholder="请输入您的QQ号码">
+        <input id="firstInput" type="number" pattern="\d*[0-9]*" placeholder="请输入您的QQ号码"/>
     </div>
     <div class="wraning"></div>
     <div class="second write clear">
         <label>再次输入QQ号码：</label>
-        <input id="secondInput" type="number" pattern="\d*" placeholder="请再次输入您的QQ号码">
+        <input id="secondInput" type="number" pattern="\d*[0-9]*" placeholder="请再次输入您的QQ号码"/>
         <span id="yes"></span>
         <span id="wron"></span>
     </div>
@@ -62,7 +62,7 @@
         <ul>
             <li>
                 <span>开通产品：</span>
-                <span>QQ会员音乐流量包（11.9元）</span>
+                <span>QQ会员音乐流量包（17元）</span>
             </li>
             <li>
                 <span>手机号码：</span>
@@ -85,13 +85,13 @@
     </div>
     <div class="content">
         <ul>
-            <li>1、产品价格：11.9元/次。本产品为短期优惠，优惠截止至2017年12月31日。</li>
+            <li>1、产品价格：17元/次。本产品为短期优惠，优惠截止至2017年12月31日。</li>
             <li>2、产品资源：1024MB北京本地7天通用流量+ QQ音乐7天会员权益。套餐中包含的流量在北京2G、3G、4G网络下均可使用。</li>
         </ul>
         <div class="more">点击加载更多</div>
         <ul class="moreList">
             <li>3、有效期：立即办理立即生效，QQ音乐会员权益和1024MB流量的有效期均为7天，过期失效。</li>
-            <li>4、会员流量包可重复购买，一天内一个手机号码和一个QQ号码只能够订购1次，一个月内最多订购4次。</li>
+            <li>4、会员流量包可重复购买，一天内一个手机号码和一个QQ号码只能够订购1次，一个月内最多订购3次。</li>
             <li>5、请输入正确的QQ号码，订购成功后，以QQ号码作为登录QQ音乐的唯一标识，可获取QQ音乐会员资格，手机号码可获得北京移动1024MB本地7天通用流量。</li>
             <li>6、产品开通后立即扣费，为一次性收费，不会每月扣取包月费用。</li>
             <li>7、产品订购后无法取消，业务到期后剩余流量和会员权益自动失效。产品有效期内，若手机号码整月处于停机状态，有效期不顺延。
